partners update and remove campaign

--- a/index.html
+++ b/index.html
@@ -107,55 +107,6 @@
         </div>
     </header>
 
-    <!-- Campaign -->
-    <section class="page-section bg-light-green" id="campaign">
-        <div class="container">
-            <div class="text-center mb-5">
-                <h2 class="section-heading text-uppercase">Current Campaign</h2>
-                <h3 class="section-subheading text-muted">Earn While You Grow with Keboon</h3>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-lg-12 mb-5">
-                    <!-- Campaign Carousel -->
-                    <div id="campaignCarousel" class="carousel slide" data-bs-ride="carousel">
-                        <div class="carousel-indicators">
-                            <button type="button" data-bs-target="#campaignCarousel" data-bs-slide-to="0" class="active"
-                                aria-current="true" aria-label="Campaign Poster"></button>
-                            <button type="button" data-bs-target="#campaignCarousel" data-bs-slide-to="1"
-                                aria-label="Campaign Steps"></button>
-                            <button type="button" data-bs-target="#campaignCarousel" data-bs-slide-to="2"
-                                aria-label="Terms and Conditions"></button>
-                        </div>
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img src="assets/img/campaign/campaign-poster.png" class="d-block w-100 rounded shadow"
-                                    alt="Campaign Poster">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="assets/img/campaign/campaign-steps.png" class="d-block w-100 rounded shadow"
-                                    alt="Campaign Steps">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="assets/img/campaign/campaign-tnc.png" class="d-block w-100 rounded shadow"
-                                    alt="Terms and Conditions">
-                            </div>
-                        </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#campaignCarousel"
-                            data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#campaignCarousel"
-                            data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- About-->
     <section class="page-section" id="about">
         <div class="container">
@@ -514,98 +465,44 @@
             </div>
     </section>
 
+    <!-- Sponsors & Partners -->
+    <section class="page-section bg-light" id="sponsors">
+        <div class="container">
+            <div class="text-center">
+                <h2 class="section-heading text-uppercase">Our Sponsors & Partners</h2>
+                <h3 class="section-subheading text-muted">Organizations supporting our mission</h3>
+            </div>
+            <div class="row justify-content-center align-items-center">
+                <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
+                    <div class="card h-100 border-0 shadow-sm">
+                        <div class="card-body text-center py-5">
+                            <img src="assets/img/partner/google.png" alt="Google for Startups"
+                                class="img-fluid mb-4" style="max-height: 100px;">
+                            <h5>Google for Startups</h5>
+                            <p class="text-muted mb-0">Providing cloud infrastructure and technical support to help
+                                scale our platform.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
+                    <div class="card h-100 border-0 shadow-sm">
+                        <div class="card-body text-center py-5">
+                            <img src="assets/img/partner/github.png" alt="GitHub Student Developer Pack"
+                                class="img-fluid mb-4" style="max-height: 100px;">
+                            <h5>GitHub Student Developer Pack</h5>
+                            <p class="text-muted mb-0">Supporting our development workflow with tools and resources for
+                                innovation.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center mt-5">
+                <p class="text-muted">Interested in partnering with us? <a href="#contact">Get in touch</a> to explore
+                    collaboration opportunities.</p>
+            </div>
+        </div>
+    </section>
 
-    <!-- Survey -->
-    <!-- 
-        <section class="page-section bg-light-green" id="survey">
-            <div class="container">
-                <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Help Shape the Future of Local Produce Shopping!</h2>
-                    <h3 class="section-subheading text-muted mb-5">Your input is invaluable in creating an app that truly serves your needs.</h3>
-                </div>
-                <div class="row justify-content-center">
-                    <div class="col-lg-8 col-xl-7">
-                        <div class="card shadow">
-                            <div class="card-body">
-                                <h4 class="card-title mb-4">In this quick 5-minute survey, you'll share your thoughts on:</h4>
-                                <ul class="list-unstyled mb-4">
-                                    <li class="mb-2"><i class="fas fa-check text-primary me-2"></i>Your current produce buying habits</li>
-                                    <li class="mb-2"><i class="fas fa-check text-primary me-2"></i>Your interest in a local produce app</li>
-                                    <li class="mb-2"><i class="fas fa-check text-primary me-2"></i>Features you'd find most useful</li>
-                                </ul>
-                                <p class="mb-4">Your responses will guide our development and help support local agriculture. Together, we can create a more sustainable and connected local food system!</p>
-                                <div class="text-center">
-                                    <a href="https://forms.gle/izSca25JVmVqmyr49" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-xl text-uppercase">Take the Survey Now</a>
-                                </div>
-                            </div>
-                        </div>
-                        <p class="text-muted text-center mt-3">Thank you for your time and valuable feedback!</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-    -->
-    <!-- Social Media Feeds -->
-    <!-- 
-        <section id="social-media-feeds" class="page-section bg-light">
-            <div class="container">
-                <div class="text-center mb-5">
-                    <h2 class="section-heading text-uppercase">Follow Our Journey</h2>
-                    <h3 class="section-subheading text-muted">Stay updated with Keboon's latest activities on social media</h3>
-                </div>
-                <div class="row justify-content-center">
-                    <div class="col-12 col-lg-6 mb-4">
-                        <div class="card shadow h-100">
-                            <div class="card-body">
-                                <h4 class="card-title text-center mb-3">Instagram</h4>
-                                <div class="embed-container d-flex justify-content-center">
-                                    <script async defer src="https://www.instagram.com/embed.js"></script>
-                                    <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/keboonmy/" data-instgrm-version="14" style="max-width:100%; width:100%">
-                                        <a href="https://www.instagram.com/keboonmy/"></a>
-                                    </blockquote>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-lg-4 mb-4">
-                        <div class="card shadow h-100">
-                            <div class="card-body">
-                                <h4 class="card-title text-center mb-3">Facebook</h4>
-                                <div id="fb-root"></div>
-                                <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v14.0"></script>
-                                <div class="fb-page" data-href="https://www.facebook.com/keboon.tech" data-tabs="timeline" data-width="" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
-                                    <blockquote cite="https://www.facebook.com/keboon.tech" class="fb-xfbml-parse-ignore">
-                                        <a href="https://www.facebook.com/keboon.tech">Keboon</a>
-                                    </blockquote>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-    -->
-    <!-- Team -->
-    <!--
-        <section class="page-section bg-light-blue" id="team">
-            <div class="container">
-                <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Our Team</h2>
-                    <h3 class="section-subheading text-muted">The minds behind Keboon</h3>
-                </div>
-                <div class="row justify-content-center">
-                    <div class="col-lg-8">
-                        <div class="team-member text-center">
-                            <img class="mx-auto rounded-circle mb-4" src="assets/img/team/aimi_misman.jpg" alt="Aimi Misman" />
-                            <h4>Aimi Misman</h4>
-                            <p class="text-muted">Founder, CEO</p>
-                            <p class="text-justify">A passionate advocate for sustainable living and local economies, Aimi is the driving force behind Keboon, a platform dedicated to connecting home growers and producers with their neighbors and consumers. With a deep commitment to leveraging technology for social good, she envisions a world where communities thrive through access to fresh, locally-sourced produce, reducing carbon footprints, and fostering resilience in local economies. As a visionary technology leader, she combines her expertise in software development, project management, and business strategy to turn this vision into reality. She is skilled in guiding cross-functional teams and integrating innovative solutions that align with Keboon's mission. Her work is not just about creating software—it's about making a lasting, positive impact on how people connect, consume, and support their local communities. She believes that through technology, we can empower individuals to contribute to a healthier planet and a more connected society.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-    -->
     <!-- Contact -->
     <section id="contact" class="page-section bg-light card-section">
         <div class="container">
