--- a/index.html
+++ b/index.html
@@ -465,22 +465,22 @@
             </div>
     </section>
 
-    <!-- Sponsors & Partners -->
+    <!-- Programs & Tools We Use -->
     <section class="page-section bg-light" id="sponsors">
         <div class="container">
             <div class="text-center">
-                <h2 class="section-heading text-uppercase">Our Sponsors & Partners</h2>
-                <h3 class="section-subheading text-muted">Organizations supporting our mission</h3>
+                <h2 class="section-heading text-uppercase">Programs & Tools We Use</h2>
+                <h3 class="section-subheading text-muted">Resources helping us build and scale Keboon</h3>
             </div>
             <div class="row justify-content-center align-items-center">
                 <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
                     <div class="card h-100 border-0 shadow-sm">
                         <div class="card-body text-center py-5">
-                            <img src="assets/img/partner/google.png" alt="Google for Startups"
-                                class="img-fluid mb-4" style="max-height: 100px;">
+                            <img src="assets/img/partner/google.png" alt="Google for Startups" class="img-fluid mb-4"
+                                style="max-height: 100px;">
                             <h5>Google for Startups</h5>
-                            <p class="text-muted mb-0">Providing cloud infrastructure and technical support to help
-                                scale our platform.</p>
+                            <p class="text-muted mb-0">We received credits from Google for Startups to support our cloud
+                                infrastructure and technical needs.</p>
                         </div>
                     </div>
                 </div>
@@ -490,14 +490,14 @@
                             <img src="assets/img/partner/github.png" alt="GitHub Student Developer Pack"
                                 class="img-fluid mb-4" style="max-height: 100px;">
                             <h5>GitHub Student Developer Pack</h5>
-                            <p class="text-muted mb-0">Supporting our development workflow with tools and resources for
-                                innovation.</p>
+                            <p class="text-muted mb-0">We utilize tools and resources from the GitHub Student Developer
+                                Pack to support our development workflow.</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="text-center mt-5">
-                <p class="text-muted">Interested in partnering with us? <a href="#contact">Get in touch</a> to explore
+                <p class="text-muted">Interested in working with us? <a href="#contact">Get in touch</a> to explore
                     collaboration opportunities.</p>
             </div>
         </div>
