--- a/index.html
+++ b/index.html
@@ -499,6 +499,9 @@
             <div class="text-center mt-5">
                 <p class="text-muted">Interested in working with us? <a href="#contact">Get in touch</a> to explore
                     collaboration opportunities.</p>
+                <p class="text-muted" style="font-size: 0.9rem;">
+                    Some of these are public programs available to eligible participants.
+                </p>
             </div>
         </div>
     </section>
