Our Ecosystem of Support

--- a/index.html
+++ b/index.html
@@ -465,11 +465,11 @@
             </div>
     </section>
 
-    <!-- Programs & Tools We Use -->
+    <!-- Our Ecosystem of Support -->
     <section class="page-section bg-light" id="sponsors">
         <div class="container">
             <div class="text-center">
-                <h2 class="section-heading text-uppercase">Programs & Tools We Use</h2>
+                <h2 class="section-heading text-uppercase">Our Ecosystem of Support</h2>
                 <h3 class="section-subheading text-muted">Resources helping us build and scale Keboon</h3>
             </div>
             <div class="row justify-content-center align-items-center">
