--- a/index.html
+++ b/index.html
@@ -615,8 +615,7 @@
                 </div>
                 <div class="carousel-card">
                     <img src="assets/img/partner/MADCash-Color.png" alt="MADCash">
-                    <p>A fintech supporting women entrepreneurs. Keboon joined their Investor Network program in
-                        Singapore, engaging with investors including Schroders.</p>
+                    <p>A fintech supporting women entrepreneurs. Keboon joined their Investor Network program, engaging with investors.</p>
                 </div>
             </div>
         </div>
