--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             <div class="masthead-heading text-uppercase">Welcome to<br><img src="assets/img/keboon-logo-white.png"
                     width="300"></div>
             <a class="btn btn-primary btn-xl text-uppercase" href="https://app.keboon.net/installation" target="_blank"
-                rel="noopener noreferrer">Install Keboon App Now!</a>
+                rel="noopener noreferrer">TRY KEBOON APP DEMO NOW!</a>
         </div>
     </header>
 
