update partner title

--- a/index.html
+++ b/index.html
@@ -88,6 +88,16 @@
             animation: scroll 30s linear infinite reverse;
         }
 
+        .carousel-card h5 {
+            font-size: 1.05rem;
+            font-weight: 600;
+            margin-bottom: 0.5rem;
+            color: #2c3e50;
+            min-height: 50px;
+            text-align: center;
+        }
+
+
 
         .carousel-card {
             white-space: normal;
@@ -581,16 +591,19 @@
         <div class="carousel-wrapper mb-4">
             <div class="carousel-track" id="carousel-row-1">
                 <div class="carousel-card">
+                    <h5>PACE by Artem Ventures</h5>
                     <img src="assets/img/partner/Artem.png" alt="Artem Ventures">
                     <p>Selected for a curated program supporting early-stage founders with fundraising, scaling, and
                         validation strategies.</p>
                 </div>
                 <div class="carousel-card">
+                    <h5>Cradle Fund CIP Spark</h5>
                     <img src="assets/img/partner/cip_spark.png" alt="Cradle Fund">
                     <p>Shortlisted for a government-backed grant program that identifies and funds high-potential
                         Malaysian startups.</p>
                 </div>
                 <div class="carousel-card">
+                    <h5>Google for Startups</h5>
                     <img src="assets/img/partner/google.png" alt="Google for Startups">
                     <p>Received Google Cloud credits to support our infrastructure and scale efficiently during early
                         growth.</p>
@@ -602,19 +615,25 @@
         <div class="carousel-wrapper">
             <div class="carousel-track" id="carousel-row-2">
                 <div class="carousel-card">
+                    <h5>
+                        GitHub Student Developer Pack
+                    </h5>
                     <img src="assets/img/partner/github.png" alt="GitHub Student Developer Pack">
                     <p>Using GitHub’s tools and cloud services to support prototyping and streamline our developer
                         workflow.</p>
                 </div>
 
                 <div class="carousel-card">
+                    <h5>Keboon Technology Solution</h5>
                     <img src="assets/img/partner/keboon_technology_solution.png" alt="Keboon Technology Solution">
                     <p>The team behind Keboon’s MVP and prototype — delivering full-stack development, UI/UX design, and
                         deployment.</p>
                 </div>
                 <div class="carousel-card">
+                    <h5>MADCash</h5>
                     <img src="assets/img/partner/MADCash-Color.png" alt="MADCash">
-                    <p>A fintech supporting women entrepreneurs. Keboon joined their Investor Network program, engaging with investors.</p>
+                    <p>A fintech supporting women entrepreneurs. Keboon joined their Investor Network program, engaging
+                        with investors.</p>
                 </div>
             </div>
         </div>
