--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 
 
             <a class="btn btn-primary btn-xl cta-btn" href="https://app.keboon.net/installation" target="_blank">
-                TRY KEBOON APP DEMO NOW!
+                SIGN UP AND EXPLORE NOW!
             </a>
         </div>
     </header>
