--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
 
 
 
-            <a class="btn btn-primary btn-xl cta-btn" href="https://app.keboon.net/installation" target="_blank">
+            <a class="btn btn-primary btn-xl cta-btn" href="https://app.keboon.net/" target="_blank">
                 SIGN UP AND EXPLORE NOW!
             </a>
         </div>
