--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     <title>Keboon - Local Produce Marketplace</title>
     <link rel="icon" type="image/png" href="assets/img/ICN-LOGO-1.png" />
     <!-- LinkedIn Badge Script -->
-  <script src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+    <script
+      src="https://platform.linkedin.com/badges/js/profile.js"
+      async
+      defer
+    ></script>
     <script
       src="https://use.fontawesome.com/releases/v6.3.0/js/all.js"
       crossorigin="anonymous"
@@ -333,9 +337,6 @@
             <li class="nav-item">
               <a class="nav-link" href="#about">About</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#team">Team</a>
-              </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
             </li>
@@ -978,50 +979,6 @@
       </div>
     </section>
 
- <!-- Team Section -->
-<section class="page-section fade-in-up bg-light py-5" id="team">
-    <div class="container">
-      <div class="text-center mb-5 fade-in-down">
-        <h2 class="section-heading text-uppercase">Meet the Team</h2>
-        <h3 class="section-subheading text-muted">Our passionate founders and contributors</h3>
-      </div>
-      <div class="d-flex justify-content-center mb-4 fade-in-up">
-        <div class="team-card bg-white rounded-3 shadow-lg p-5 mx-auto" style="display:inline-block;">
-          <div class="row g-4 justify-content-center">
-            <!-- Aimi Misman -->
-            <div class="col-auto d-flex flex-column align-items-start">
-              <div class="badge-base LI-profile-badge mb-3"  
-                   data-locale="en_US" data-size="medium" data-theme="light" data-type="vertical" 
-                   data-vanity="aimi-misman-065b2a150" data-version="v1"></div>
-              <p class="mb-0 fw-bold text-start">Aimi Misman</p>
-              <p class="text-primary small text-start">Founder &amp; Software Developer</p>
-            </div>
-            <!-- Farah Diyana Firhad -->
-            <div class="col-auto d-flex flex-column align-items-start">
-              <div class="badge-base LI-profile-badge mb-3"  
-                   data-locale="en_US" data-size="medium" data-theme="light" data-type="vertical" 
-                   data-vanity="farahdiyanafirhad" data-version="v1"></div>
-              <p class="mb-0 fw-bold text-start">NurFarah Diyana Firhad</p>
-              <p class="text-primary small text-start">Marketing &amp; Communication Advisor</p>
-            </div>
-            <!-- Faiz Misman -->
-            <div class="col-auto d-flex flex-column align-items-start">
-              <div class="badge-base LI-profile-badge mb-3"  
-                   data-locale="en_US" data-size="medium" data-theme="light" data-type="vertical" 
-                   data-vanity="faizmisman" data-version="v1"></div>
-              <p class="mb-0 fw-bold text-start">Faiz Misman</p>
-              <p class="text-primary small text-start">Artificial Intelligence Advisor</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  
-  
-  
-  
-  
     <!-- Contact -->
     <section id="contact" class="page-section bg-light card-section">
       <div class="container">
