--- a/index.html
+++ b/index.html
@@ -1012,47 +1012,50 @@
     </section>
 
     <!-- Footer -->
-    <footer class="footer py-4 bg-dark text-white">
-      <div class="container">
-        <div class="row align-items-center justify-content-between">
-          <div class="col-lg-4 text-center text-lg-start mb-3 mb-lg-0">
-            Copyright © KEBOON TECHNOLOGY SOLUTION<br />
-            Business RN: 003639101-D
-          </div>
-          <div class="col-lg-4 d-flex justify-content-center mb-3 mb-lg-0">
-            <a
-              class="btn btn-light btn-social mx-2"
-              href="https://instagram.com/keboonmy"
-              aria-label="Keboon Instagram Profile"
-              target="_blank"
-              rel="noopener noreferrer"
-              ><i class="fab fa-instagram"></i
-            ></a>
-            <a
-              class="btn btn-light btn-social mx-2"
-              href="https://facebook.com/keboon.tech"
-              aria-label="Keboon Facebook Profile"
-              target="_blank"
-              rel="noopener noreferrer"
-              ><i class="fab fa-facebook-f"></i
-            ></a>
-            <a
-              class="btn btn-light btn-social mx-2"
-              href="https://linkedin.com/company/keboon-tech/"
-              aria-label="Keboon LinkedIn Profile"
-              target="_blank"
-              rel="noopener noreferrer"
-              ><i class="fab fa-linkedin-in"></i
-            ></a>
-          </div>
-          <div class="col-lg-4 text-center text-lg-end">
-            <!-- Uncomment these lines if you want to add Privacy Policy and Terms of Use links -->
-            <!-- <a class="link-light text-decoration-none me-3" href="#!">Privacy Policy</a>
-                        <a class="link-light text-decoration-none" href="#!">Terms of Use</a> -->
-          </div>
+<footer class="footer py-4 bg-dark text-white">
+    <div class="container">
+      <div class="row align-items-center justify-content-between">
+        <div class="col-lg-4 text-center text-lg-start mb-3 mb-lg-0">
+          © <span id="current-year"></span> KEBOON TECHNOLOGY SOLUTION<br />
+          Business RN: 003639101-D
+        </div>
+        <div class="col-lg-4 d-flex justify-content-center mb-3 mb-lg-0">
+          <a
+            class="btn btn-light btn-social mx-2"
+            href="https://instagram.com/keboonmy"
+            aria-label="Keboon Instagram Profile"
+            target="_blank"
+            rel="noopener noreferrer"
+          ><i class="fab fa-instagram"></i></a>
+          <a
+            class="btn btn-light btn-social mx-2"
+            href="https://facebook.com/keboon.tech"
+            aria-label="Keboon Facebook Profile"
+            target="_blank"
+            rel="noopener noreferrer"
+          ><i class="fab fa-facebook-f"></i></a>
+          <a
+            class="btn btn-light btn-social mx-2"
+            href="https://linkedin.com/company/keboon-tech/"
+            aria-label="Keboon LinkedIn Profile"
+            target="_blank"
+            rel="noopener noreferrer"
+          ><i class="fab fa-linkedin-in"></i></a>
+        </div>
+        <div class="col-lg-4 text-center text-lg-end">
+          <!-- Optional: Privacy & Terms links -->
+          <!-- <a class="link-light text-decoration-none me-3" href="#!">Privacy Policy</a> -->
+          <!-- <a class="link-light text-decoration-none" href="#!">Terms of Use</a> -->
         </div>
       </div>
-    </footer>
+    </div>
+  </footer>
+  
+  <!-- Dynamic Year Script: place just before </body> -->
+  <script>
+    document.getElementById('current-year').textContent = new Date().getFullYear();
+  </script>
+  
 
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
