--- a/index.html
+++ b/index.html
@@ -346,6 +346,9 @@
             <li class="nav-item">
               <a class="nav-link" href="https://ai.keboon.net/">Keboon AI</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="services.html">Other Services</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -1012,50 +1015,53 @@
     </section>
 
     <!-- Footer -->
-<footer class="footer py-4 bg-dark text-white">
-    <div class="container">
-      <div class="row align-items-center justify-content-between">
-        <div class="col-lg-4 text-center text-lg-start mb-3 mb-lg-0">
-          © <span id="current-year"></span> KEBOON TECHNOLOGY SOLUTION<br />
-          Business RN: 003639101-D
-        </div>
-        <div class="col-lg-4 d-flex justify-content-center mb-3 mb-lg-0">
-          <a
-            class="btn btn-light btn-social mx-2"
-            href="https://instagram.com/keboonmy"
-            aria-label="Keboon Instagram Profile"
-            target="_blank"
-            rel="noopener noreferrer"
-          ><i class="fab fa-instagram"></i></a>
-          <a
-            class="btn btn-light btn-social mx-2"
-            href="https://facebook.com/keboon.tech"
-            aria-label="Keboon Facebook Profile"
-            target="_blank"
-            rel="noopener noreferrer"
-          ><i class="fab fa-facebook-f"></i></a>
-          <a
-            class="btn btn-light btn-social mx-2"
-            href="https://linkedin.com/company/keboon-tech/"
-            aria-label="Keboon LinkedIn Profile"
-            target="_blank"
-            rel="noopener noreferrer"
-          ><i class="fab fa-linkedin-in"></i></a>
-        </div>
-        <div class="col-lg-4 text-center text-lg-end">
-          <!-- Optional: Privacy & Terms links -->
-          <!-- <a class="link-light text-decoration-none me-3" href="#!">Privacy Policy</a> -->
-          <!-- <a class="link-light text-decoration-none" href="#!">Terms of Use</a> -->
+    <footer class="footer py-4 bg-dark text-white">
+      <div class="container">
+        <div class="row align-items-center justify-content-between">
+          <div class="col-lg-4 text-center text-lg-start mb-3 mb-lg-0">
+            © <span id="current-year"></span> KEBOON TECHNOLOGY SOLUTION<br />
+            Business RN: 003639101-D
+          </div>
+          <div class="col-lg-4 d-flex justify-content-center mb-3 mb-lg-0">
+            <a
+              class="btn btn-light btn-social mx-2"
+              href="https://instagram.com/keboonmy"
+              aria-label="Keboon Instagram Profile"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><i class="fab fa-instagram"></i
+            ></a>
+            <a
+              class="btn btn-light btn-social mx-2"
+              href="https://facebook.com/keboon.tech"
+              aria-label="Keboon Facebook Profile"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><i class="fab fa-facebook-f"></i
+            ></a>
+            <a
+              class="btn btn-light btn-social mx-2"
+              href="https://linkedin.com/company/keboon-tech/"
+              aria-label="Keboon LinkedIn Profile"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><i class="fab fa-linkedin-in"></i
+            ></a>
+          </div>
+          <div class="col-lg-4 text-center text-lg-end">
+            <!-- Optional: Privacy & Terms links -->
+            <!-- <a class="link-light text-decoration-none me-3" href="#!">Privacy Policy</a> -->
+            <!-- <a class="link-light text-decoration-none" href="#!">Terms of Use</a> -->
+          </div>
         </div>
       </div>
-    </div>
-  </footer>
-  
-  <!-- Dynamic Year Script: place just before </body> -->
-  <script>
-    document.getElementById('current-year').textContent = new Date().getFullYear();
-  </script>
-  
+    </footer>
+
+    <!-- Dynamic Year Script: place just before </body> -->
+    <script>
+      document.getElementById("current-year").textContent =
+        new Date().getFullYear();
+    </script>
 
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
