Add Other Services

--- a/services.html
+++ b/services.html
@@ -147,7 +147,9 @@
       <p class="lead" data-aos="fade-up" data-aos-delay="200">
         Everything you need for a professional online presence<br>
         Websites, domains, emails &amp; support—handled end to end.
+        <p class="fst-italic text-center mt-5 mb-0">By Keboon Technology Solution</p>
       </p>
+      
       <a href="#contact" class="btn btn-light btn-lg" data-aos="zoom-in" data-aos-delay="300">
         Get Started Today
       </a>
@@ -561,7 +563,7 @@
 <!-- FOOTER -->
 <footer class="text-center py-4">
   <div class="container">
-    <p class="mb-1">© <span id="year"></span> Aimi Misman | Freelance Developer.</p>
+    <p class="mb-1">© <span id="year"></span> Keboon Technology Solution.</p>
   </div>
 </footer>
 
