Add Other Services

--- a/services.html
+++ b/services.html
@@ -266,8 +266,8 @@
           <div class="card package-card h-100 text-center">
             <div class="card-header text-primary">Basic</div>
             <div class="card-body d-flex flex-column">
-              <div class="package-price text-primary mb-2">RM 5,000</div>
-              <div class="optional-note mb-3">(Optional RM 1,000/mo for unlimited support)</div>
+              <div class="package-price text-primary mb-2">From RM 2,500</div>
+              <div class="optional-note mb-3">(Optional RM 200/mo for unlimited support)</div>
               <ul class="list-unstyled text-start mb-4 flex-grow-1">
                 <li>
                   <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="var(--color-secondary)" viewBox="0 0 16 16">
@@ -310,8 +310,8 @@
           <div class="card package-card h-100 text-center">
             <div class="card-header text-success">Standard</div>
             <div class="card-body d-flex flex-column">
-              <div class="package-price text-success mb-2">RM 8,000</div>
-              <div class="optional-note mb-3">(Optional RM 2,000/mo for unlimited support)</div>
+              <div class="package-price text-success mb-2">From RM 5,000</div>
+              <div class="optional-note mb-3">(Optional RM 350/mo for unlimited support)</div>
               <ul class="list-unstyled text-start mb-4 flex-grow-1">
                 <li>
                   <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="var(--color-secondary)" viewBox="0 0 16 16">
@@ -354,8 +354,8 @@
           <div class="card package-card h-100 text-center">
             <div class="card-header text-dark">Premium</div>
             <div class="card-body d-flex flex-column">
-              <div class="package-price text-dark mb-2">RM 12,000</div>
-              <div class="optional-note mb-3">(Optional RM 3,000/mo for unlimited support)</div>
+              <div class="package-price text-dark mb-2">From RM 8,000</div>
+              <div class="optional-note mb-3">(Optional RM 500/mo for unlimited support)</div>
               <ul class="list-unstyled text-start mb-4 flex-grow-1">
                 <li>
                   <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="var(--color-secondary)" viewBox="0 0 16 16">
