--- a/services.html
+++ b/services.html
@@ -218,10 +218,10 @@
   
 <!-- Promo Banner: Limited Discount for First 100 Clients -->
 <div class="promo-banner text-center mb-5">
-    🎉 Discounted pricing is available only to the first <strong>15 clients</strong> with a valid promo code.
+    🎉 Discounted pricing is available only to the first <strong>100 clients</strong> with a valid promo code — shared exclusively on our social media.
   </div>
   
-<!-- Pricing & Packages Section -->
+  <!-- Pricing & Packages Section -->
   <section id="pricing" class="page-section bg-light" data-aos="fade-up">
     <div class="container">
       <h2 class="section-heading text-center mb-5">Pricing &amp; Packages</h2>
@@ -233,8 +233,8 @@
             <div class="card-header text-primary">Basic</div>
             <div class="card-body d-flex flex-column">
               <div class="package-price text-primary mb-2">
-                <del>From RM 2,500</del>
-                RM 1,800
+                <del>From RM 1,800</del>
+                RM 1,710
               </div>
               <div class="optional-note mb-3">(Optional RM 200/mo for unlimited support)</div>
               <ul class="list-unstyled text-start mb-4 flex-grow-1">
@@ -255,8 +255,8 @@
             <div class="card-header text-success">Standard</div>
             <div class="card-body d-flex flex-column">
               <div class="package-price text-success mb-2">
-                <del>From RM 5,000</del>
-                RM 3,200
+                <del>From RM 3,500</del>
+                RM 3,325
               </div>
               <div class="optional-note mb-3">(Optional RM 350/mo for unlimited support)</div>
               <ul class="list-unstyled text-start mb-4 flex-grow-1">
@@ -277,8 +277,8 @@
             <div class="card-header text-dark">Premium</div>
             <div class="card-body d-flex flex-column">
               <div class="package-price text-dark mb-2">
-                <del>From RM 8,000</del>
-                RM 5,400
+                <del>From RM 5,500</del>
+                RM 5,225
               </div>
               <div class="optional-note mb-3">(Optional RM 500/mo for unlimited support)</div>
               <ul class="list-unstyled text-start mb-4 flex-grow-1">
@@ -301,6 +301,7 @@
       </p>
     </div>
   </section>
+  
   
   
   <!-- PORTFOLIO -->
