Add Other Services

--- a/services.html
+++ b/services.html
@@ -218,7 +218,7 @@
   
 <!-- Promo Banner: Limited Discount for First 100 Clients -->
 <div class="promo-banner text-center mb-5">
-    🎉 Discounted pricing is available only to the first <strong>15 clients</strong> with a valid promo code — shared exclusively on our social media.
+    🎉 Discounted pricing is available only to the first <strong>15 clients</strong> with a valid promo code.
   </div>
   
   <!-- Pricing & Packages Section -->
