--- a/services.html
+++ b/services.html
@@ -54,8 +54,8 @@
     .text-accent {
       color: var(--color-accent) !important;
     }
+    /* Hero */
     #hero {
-      position: relative;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -70,7 +70,6 @@
     }
     #hero h1 {
       font-size: 2.5rem;
-      line-height: 1.2;
       margin-bottom: 1rem;
       text-shadow: 0 2px 4px rgba(0,0,0,0.6);
     }
@@ -79,19 +78,16 @@
       margin-bottom: 1.5rem;
       text-shadow: 0 1px 3px rgba(0,0,0,0.5);
     }
-    #hero .btn-primary {
-      background-color: var(--color-secondary);
-      border-color: var(--color-secondary);
+    #hero .btn-light {
       padding: 0.75rem 2rem;
       font-size: 1rem;
       transition: transform 0.2s, box-shadow 0.2s;
     }
-    #hero .btn-primary:hover {
-      background-color: var(--color-accent);
-      border-color: var(--color-accent);
+    #hero .btn-light:hover {
       transform: scale(1.05);
       box-shadow: 0 4px 12px rgba(0,0,0,0.4);
     }
+    /* Section headings */
     .section-heading {
       margin-bottom: 1rem;
       font-weight: 600;
@@ -100,6 +96,7 @@
     .page-section {
       padding: 60px 0;
     }
+    /* Cards */
     .card {
       transition: transform 0.3s, box-shadow 0.3s;
     }
@@ -116,6 +113,14 @@
     .card-header.bg-dark {
       background-color: var(--color-accent) !important;
     }
+    /* Promo banner */
+    .promo-banner {
+      background: var(--color-secondary);
+      color: #fff;
+      padding: 1rem 0;
+      font-weight: 500;
+    }
+    /* Footer */
     footer {
       background-color: var(--color-primary);
       color: #fff;
@@ -126,6 +131,7 @@
       color: #fff;
       text-decoration: underline;
     }
+    /* Responsive */
     @media (min-width: 768px) {
       #hero h1 {
         font-size: 3.5rem;
@@ -222,7 +228,7 @@
   <!-- Promo Banner -->
   <div class="promo-banner text-center mb-5">
     🎉 Discounted pricing is available only to the first
-    <strong>100 clients</strong> with a valid promo code.
+    <strong>15 clients</strong> with a valid promo code.
   </div>
 
   <!-- Pricing & Packages Section -->
@@ -562,12 +568,54 @@
         </div>
 
       </div>
+
       <p class="fst-italic text-center mt-5 mb-0">
         Prefer no monthly fee? Add RM 1,500 for a complete handover—including full
         source-code—so you can maintain the system yourself.<br>
         Otherwise, opt for our monthly subscription to receive unlimited change
         requests &amp; ongoing support.
       </p>
+    </div>
+  </section>
+
+  <!-- Portfolio Section -->
+  <section id="portfolio" class="page-section bg-light" data-aos="fade-up">
+    <div class="container">
+      <h2 class="section-heading text-center mb-4">Portfolio</h2>
+      <div class="row justify-content-center">
+        <div class="col-md-8" data-aos="fade-up" data-aos-delay="200">
+          <div class="card h-100 shadow-sm">
+            <div class="card-header bg-primary text-white text-center">
+              <img
+                src="assets/img/keboon-writing.png"
+                alt="Keboon Logo"
+                class="img-fluid mb-2"
+                style="max-height:60px;"
+              />
+            </div>
+            <div class="card-body text-center">
+              <p class="card-text mb-3">
+                Local Produce Marketplace connecting neighbours to share
+                fresh, home-grown produce.
+              </p>
+              <div class="d-flex justify-content-center gap-2">
+                <a
+                  href="https://keboon.net"
+                  target="_blank"
+                  class="btn btn-outline-primary"
+                  >Visit keboon.net</a
+                >
+                <a
+                  href="https://app.keboon.net"
+                  target="_blank"
+                  class="btn btn-outline-secondary"
+                  >Visit app.keboon.net</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
@@ -593,7 +641,9 @@
           </a>
         </div>
       </div>
-      <p>We’re expanding our team! Contact us below if you’d like to join.</p>
+      <p>
+        We’re expanding our team! Contact us below if you’d like to join.
+      </p>
     </div>
   </section>
 
@@ -771,10 +821,9 @@
   <!-- Populate & Submit Scripts -->
   <script>
     // set current year
-    document.getElementById('year').textContent =
-      new Date().getFullYear();
+    document.getElementById('year').textContent = new Date().getFullYear();
 
-    // populate package on click
+    // prefill form when package selected
     function populatePackage(pkg) {
       document.getElementById('_subject').value =
         'Package Inquiry: ' + pkg;
@@ -788,7 +837,7 @@
       msg.focus();
     }
 
-    // fallback: ensure subject on manual submit
+    // fallback for manual submit
     document
       .getElementById('contactForm')
       .addEventListener('submit', () => {
@@ -801,7 +850,7 @@
       });
   </script>
 
-  <!-- Bootstrap & AOS JS -->
+  <!-- Bootstrap JS & AOS Init -->
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
   ></script>
