Add Other Services

--- a/services.html
+++ b/services.html
@@ -157,7 +157,7 @@
         By Keboon Technology Solution
       </p>
       <a
-        href="#contact"
+        href="#pricing"
         class="btn btn-light btn-lg mt-4"
         data-aos="zoom-in"
         data-aos-delay="300"
