Add Other Services

--- a/services.html
+++ b/services.html
@@ -384,7 +384,7 @@
               </div>
             </div>
             <div class="optional-note mb-3 text-muted text-center">
-              <strong>Add-On Support:</strong> 4 change requests per month + full hosting &amp; email maintenance—sit back while we keep your site fresh, secure &amp; running smoothly.
+              <strong>Add-On Support:</strong> 4 change requests per month + full hosting &amp; Google Workspace maintenance—sit back while we keep your site fresh, secure &amp; running smoothly.
             </div>
       
 
