--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
               <a class="nav-link" href="https://ai.keboon.net/">Keboon AI</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="services.html">Other Services</a>
+              <a class="nav-link" href="/keboon-website/services/index.html">Other Services</a>
             </li>
           </ul>
         </div>
